--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             let originalDorks = [];
 
             async function fetchDorks() {
-                const url = "https://raw.githubusercontent.com/spider1877/spider.github.io/main/README.md";
+                const url = "https://raw.githubusercontent.com/TakSec/google-dorks-bug-bounty/main/README.md";
                 const response = await fetch(url);
                 const text = await response.text();
 
